added 2d game jammers cardrige

--- a/css/main.css
+++ b/css/main.css
@@ -430,6 +430,10 @@ body.bw-theme table td span.enemy-collision:before {
     top: 80%;
 }
 
+.cartridge.no-3 {
+    top: 1093px; left: 148px;
+}
+
 .cartridge * {
     pointer-events: none;
 }
